--- a/Web.Services.CouponAPI/appsettings.json
+++ b/Web.Services.CouponAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-KEQ55HT;database=NET_Microservices;User=sa;Password=2892002;TrustServerCertificate=true"
+    "DefaultConnection": "Server=DESKTOP-KEQ55HT;database=Web_Coupon;User=sa;Password=2892002;TrustServerCertificate=true"
   }
 }
