--- a/Web.Services.CouponAPI/appsettings.json
+++ b/Web.Services.CouponAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-KEQ55HT;database=Web_Coupon;User=sa;Password=2892002;TrustServerCertificate=true"
+  },
+  "ApiSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+    "Issuer": "web-auth-api",
+    "Audience": "web-client"
   }
 }
