--- a/Web.Services.ShoppingCartAPI/appsettings.json
+++ b/Web.Services.ShoppingCartAPI/appsettings.json
@@ -15,6 +15,10 @@
     "Audience": "web-client"
   },
   "ServiceUrls": {
-    "ProductAPI": "https://localhost:7000"
+    "ProductAPI": "https://localhost:7000",
+    "CouponAPI": "https://localhost:7001"
+  },
+  "TopicAndQueueNames": {
+    "EmailShoppingCartQueue": "emailshoppingcart"
   }
 }
