--- a/Web.Services.AuthAPI/appsettings.json
+++ b/Web.Services.AuthAPI/appsettings.json
@@ -15,5 +15,8 @@
       "Issuer": "web-auth-api",
       "Audience": "web-client"
     }
+  },
+  "TopicAndQueueNames": {
+    "RegisterUserQueue": "registeruser"
   }
 }
