--- a/Web.Services.RewardAPI/appsettings.json
+++ b/Web.Services.RewardAPI/appsettings.json
@@ -7,13 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-KEQ55HT;database=Web_Email;User=sa;Password=2892002;TrustServerCertificate=true"
+    "DefaultConnection": "Server=DESKTOP-KEQ55HT;database=Web_Reward;User=sa;Password=2892002;TrustServerCertificate=true"
   },
   "ServiceBusConnectionString": "Endpoint=sb://webappmicroservices.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=4oGCMz8TJocvWlrkomo/QCobcpQkVxw6M+ASbIi9gNA=",
   "TopicAndQueueNames": {
-    "EmailShoppingCartQueue": "emailshoppingcart",
-    "RegisterUserQueue": "registeruser",
     "OrderCreatedTopic": "OrderCreated",
-    "OrderCreated_Email_Subscription": "OrderCreatedEmail"
+    "OrderCreated_Rewards_Subscription": "OrderCreatedRewardsUpdate"
   }
 }
