deploy full service

--- a/Web.Service.OrderAPI/appsettings.json
+++ b/Web.Service.OrderAPI/appsettings.json
@@ -15,7 +15,8 @@
     "Audience": "web-client"
   },
   "ServiceUrls": {
-    "ProductAPI": "https://localhost:7000"
+    "ProductAPI": "https://localhost:7000",
+    "CartAPI": "https://localhost:7003"
   },
   "TopicAndQueueNames": {
     "OrderCreatedTopic": "OrderCreated"
