--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -7,10 +7,21 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "CouponAPI": "https://localhost:7001",
     "AuthAPI": "https://localhost:7002",
+    //"CouponAPI": "https://localhost:7777",
+    //"ProductAPI": "https://localhost:7777",
+    //"ShoppingCartAPI": "https://localhost:7777",
+    //"OrderAPI": "https://localhost:7777"
+
+    "CouponAPI": "https://localhost:7001",
     "ProductAPI": "https://localhost:7000",
     "ShoppingCartAPI": "https://localhost:7003",
     "OrderAPI": "https://localhost:7004"
+
+    //"AuthAPI": "https://webservicesauthapi.azurewebsites.net",
+    //"CouponAPI": "https://webservicescouponapi.azurewebsites.net",
+    //"ProductAPI": "https://webservicesproductapi.azurewebsites.net",
+    //"ShoppingCartAPI": "https://webservicesshoppingcartapi.azurewebsites.net",
+    //"OrderAPI": "https://webservicesorderapi.azurewebsites.net"
   }
 }
