--- a/Web.Service.EmailAPI/Web.Services.EmailAPI.csproj
+++ b/Web.Service.EmailAPI/Web.Services.EmailAPI.csproj
@@ -21,6 +21,7 @@
 		</PackageReference>
 		<PackageReference Include="MimeKit" Version="4.3.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
 
